# namada-shielded-airdrop

./: BINDING_SIGNATURE.md  Cargo.toml  INTRO.md  PROTOCOL.md  README.md  STATEMENTS.md
src/: MASP_output.rs  builder.rs  bundle.rs  main.rs  sapling_spend.rs  verifier.rs
