[package]
name = "namada-shielded-airdrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
masp_primitives = { git = "https://github.com/anoma/masp", branch = "carlo/airdrop_changes" }
masp_proofs = { git = "https://github.com/anoma/masp", branch = "carlo/airdrop_changes", default-features = false, features = ["local-prover"] }
masp_note_encryption =  { git = "https://github.com/anoma/masp", branch = "carlo/airdrop_changes" }
sapling = { package = "sapling-crypto", git = "https://github.com/zcash/sapling-crypto.git", rev = "71711b9e4b775a625318070e0f56b7b652f12306" }
zcash_primitives = "0.13.0"
borsh = {version = "1.2.0", features = ["unstable__schema", "derive"]}

ff = "0.13"
group = { version = "0.13", features = ["wnaf-memuse"] }

bls12_381 = "0.8"
jubjub = "0.10"
redjubjub = "0.7"
zcash_spec = "0.1"

# Circuits
bellman = { version = "0.14", default-features = false, features = ["groth16"] }

# CSPRNG
rand = "0.8"
rand_core = "0.6"

rand_xorshift = "0.3"
clap = "4.4.14"